@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="52"
+VERSION_BUILD="53"
 
 # $Log$
+#
+# BUILD : 1.3.0.53 (SVN)
+# BUGS  : 404
+# NOTES : Denora now detects Local kills on Unreal32 (rest of protocols will be fixed soon)
 #
 # BUILD : 1.3.0.52 (SVN)
 # BUGS  : 314
