@@ -12,6 +12,7 @@ Provided by Denora Stats Dev. <dev@denorastats.org> - 2007
 08/07 U Updated GeoIP database file                               [ #00]
 07/18 U Updated GeoIP database file                               [ #00]
 01/06 U Updated GeoIP.dat                                         [ #00]
+08/10 F Local kills are now detected by Denora (Unreal32 only)    [#404]
 08/09 F Fixed syntax error in include/version.sh                  [ #00]
 08/08 F Inactive channels now get cleared from chan.db as well    [#355]
 08/08 F [inspircd11] Fixed autoop not working                     [#378]
